# Fire

./: .gitignore  CMakeLists.txt
shaders/: particle.frag  particle.geom  particle.vert  triangle.vert
src/: main.cc  particles.cc  particles.hh  program.cc  program.hh  triangle.cc  triangle.hh
